--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,8 +6,8 @@
     </div>
     <div class="mt-3 mx-auto text-center">
       <label class="fs-3" for="name">Welcome! Please enter your name to begin:</label><br>
-      <input [(ngModel)] = "inputValue" class="name w-25 mt-4 text-center" type="text" id="name" > <br>
-      <button class="btn btn-dark mt-4" (click)="onSubmit()">Submit</button>
+      <input [(ngModel)] = "name" class="name w-25 mt-4 text-center" type="text" id="name" > <br>
+      <button class="btn btn-dark mt-4" (click)="onSubmit($event)" (keyup)="onSubmit($event)">Submit</button>
     </div>
   </div>
   <div class="col-md-6 h-75 shadow-lg rounded-5" style="background-color: #e9c46a;">
